[package]
name = "bevy_hsm"
version = "0.18.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A hierarchical and finite state machine library for the Bevy game engine."
repository = "https://github.com/Yuanzhumoyu/bevy_hsm"
keywords = ["bevy", "hsm", "fsm", "state-machine", "ecs"]
include = ["/src"]
resolver = "2"
readme = "README.md"

[features]
default = ["hybrid", "history", "state_data"]
hybrid = ["hsm", "fsm"]
state_data = []
history = []
fsm = []
hsm = []

[dependencies]
bevy_hsm_macros = { path = "crates/bevy_hsm_macros" }
bevy = { version = "0.18.*", default-features = false, features = ["bevy_log"] }
smallvec = "1.15.1"
dyn-clone = "1.0.20"
dyn-eq = "0.1.3"
dyn-hash = "1.0.0"
bimap = "0.6.3"

[dev-dependencies]
bevy = { version = "0.18.*", features = [
  "dynamic_linking",
  "bevy_dev_tools",
  "shader_format_spirv",
] }

[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 3

[lints.clippy]
type_complexity = "allow"

[[example]]
name = "switch_state"
path = "examples/switch_state.rs"

[[example]]
name = "flashing_light"
path = "examples/flashing_light.rs"

[[example]]
name = "more_states"
path = "examples/more_states.rs"

[[example]]
name = "simple_fsm"
path = "examples/simple_fsm.rs"

[[example]]
name = "macros_hsm"
path = "examples/macros/hsm.rs"

[[example]]
name = "macros_fsm"
path = "examples/macros/fsm.rs"

[[example]]
name = "forced_transition"
path = "examples/forced_transition.rs"

[[test]]
name = "action_system"
path = "tests/action_system.rs"
required-features = ["hybrid"]
